firefox fix: higher z-index to overlap footer

--- a/src/app/form/form/form.component.scss
+++ b/src/app/form/form/form.component.scss
@@ -15,7 +15,7 @@
 
 .vrs-form {
     position: relative;
-    z-index: 1;
+    z-index: 11;
     padding: 50px;
     width: 100%;
     max-width: 50rem;
