--- a/src/app/news/news.component.scss
+++ b/src/app/news/news.component.scss
@@ -5,7 +5,7 @@
 .news-component {
     font-size: 1rem;
     position: relative;
-    z-index:1;
+    z-index: 11;
 
     @include media-breakpoint-down(xs) {
         font-size: 1rem;
