--- a/src/app/static/static.container.scss
+++ b/src/app/static/static.container.scss
@@ -26,7 +26,7 @@
     }
     vrs-static-content {
         position: relative;
-        z-index: 1;
+        z-index: 11;
         background: $neutral-2;
         padding-left: 100px;
         padding-top: 50px;
