--- a/src/app/taxon/taxon-card/taxon-card.component.scss
+++ b/src/app/taxon/taxon-card/taxon-card.component.scss
@@ -8,7 +8,7 @@
 
 .container {
     position: relative;
-    z-index: 1;
+    z-index: 11;
     background: $neutral-2;
     margin-bottom: -50px;
     box-shadow: 2px 2px 25px rgba(#000, 0.3);
